fixed alignment

--- a/css/custom.css
+++ b/css/custom.css
@@ -494,18 +494,30 @@ header, section {
 
 .masthead h2,
 .sub-heading {
-  margin-left: 90px;
   text-align: center;
   font-family: "Title";
   color: rgb(221, 5, 5);
   font-size: 2rem;
 }
+
+.sub-heading {
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+.masthead h2 {
+  margin-left: 90px;
+}
+
 @media screen and (max-width: 600px) {
   .masthead h2,
   .sub-heading {
-    margin-left: 40px;
     font-size: 150%;
    
+  }
+
+  .masthead h2 {
+    margin-left: 40px;
   }
 }
 
